# scaleway-poc

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.be  README.md  push_container.sh
be/: .env  .env.local  .gitignore  Cargo.toml  Dockerfile
be/src/: main.rs
be/src/helpers/: log_message.rs
be/src/models/: health.rs  hello.rs  mod.rs  state.rs  url.rs
be/src/routers/: health.rs  hello.rs  mod.rs  url.rs
be/src/workers/: aws.rs  mod.rs  redis.rs  sqs.rs
docs/presentation/: presentation.md
iac/: .gitignore  be_container.tf  function.tf  main.tf  queue.tf  redis.tf  registry.tf
lib/: Cargo.toml
lib/src/: lib.rs
triggered-function/: Cargo.toml
triggered-function/common/: Cargo.toml  common.rs
triggered-function/src/: handler.rs  main.rs
