[package]
name = "be"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = { version = "1.6.1", features = ["behavior-version-latest"] }
aws-sdk-sqs = { version = "1.64.0", features = ["behavior-version-latest"] }
diesel = "2.2.9"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
lib = { path = "../lib" }
redis = { version = "0.29.5", features = ["tokio-native-tls-comp"] }
random-string = "1.1.0"

