[package]
name = "triggered-function"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.3", features = ["json"] }
http = "1.3.1"
rand_core = { version = "0.9.3", features = ["os_rng"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
common = { path = "./common" }

[lib]
path = "src/handler.rs"

